# pgmq-test

./: .env.example  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: format-and-clippy.yml
.sqlx/: query-41c6e805ff92b74c3ad52144bbb2892553dc34fde51b21166973bdfef288b0d5.json  query-74fa517f4d8e21e0f032dce388c9cd03520d6781bbd99408b8b1581c499a165f.json  query-8e6b07599d40e92c2d9395902b22f8a68853ad54c59b146bc50c09e9dafbc1f1.json  query-915f41dd77aeb6faa1e79cb0ea5ae8b75e7a17a83abb59f94b8ad75a63100d87.json  query-d20276d9cae5bbf880690b26dd5e3c984bb11b256dc37bbb4577ace55bed916c.json  query-dac20f47aebfb8e2e63a2deaa1f165919bf32e6ab7b18989a6ed11d3158f5056.json  query-dfd8d5855c0c974326b7bd1491d7ab75d147b6c9fbd47ac0579c07f25363236b.json
migrations/: 20260127053305_create_catalogs_schema.sql  20260127053328_create_roles_table.sql  20260127113717_create_users_table.sql  20260127113750_create_users_role_table.sql  20260127120000_create_password_reset_tokens.sql
seeders/: roles.ron
src/: config.rs  main.rs
src/errors/: http.rs
src/helpers/: hash_password.rs  mod.rs  prometheus_logs.rs  validate_password.rs  verify_pgmq.rs
src/mailer/: mod.rs  service.rs
src/mailer/dtos/: mod.rs  reset_password.rs
src/mailer/entities/: email.rs
src/mailer/errors/: mod.rs
src/middlewares/: jwt.rs
src/users/: mod.rs  routes.rs  service.rs
src/users/dtos/: create.rs
src/users/entities/: user.rs
src/users/errors/: auth.rs
