[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
actix-web-grants = "4.1.2"
actix-web-httpauth = "0.8.2"
actix-web-prometheus = "0.1.2"
# https://github.com/FlakySL/actix_failwrap#installation- 
actix_failwrap = "1.0.3"
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "aws_lc_rs",
] }
lettre = "0.11.12"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.144"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "macros",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
] }
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
